Fix dialog scrolling section bleed through header and/or footer

--- a/src/UploadUi/UploadUi.css
+++ b/src/UploadUi/UploadUi.css
@@ -2,7 +2,6 @@ dialog#uploadUi {
   resize: both;
   width: 600px;
   height: 400px;
-  padding: 15px;
 }
 
 dialog#uploadUi > section > details > summary > label {
